# aces

./: .gitignore  GUIDE.md  LICENSE  README.md  aces.py  attack.py  pyproject.toml  pytest.ini  requirements.txt  setup.py  tutorial.py
.github/workflows/: publish-to-pypi.yml  python-publish.yml
docs/: guide.md
img/: create_font.py  process_img.py
pyaces/: __init__.py  aces.py  algebras.py  arith.py  compaces.py  poly.py  repartition.py
src/pyaces.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
test/: test1.py  test2.py
tests/: guide.py  quickstart.py  test_aces.py  test_algebras.py  test_classifier.py  test_compile.py  test_polynomials.py  test_primes.py  test_refresh.py  test_repartition.py
trash/: poly.py  tensor.py  test5.py  test_randiso.py  test_randiso_primes.py
