 # PyACES
# -----------------------------------------------------------------------------
# https://packaging.python.org/en/latest/specifications/pyproject-toml/

[project]
name = "pyaces"
version = "0.0.4"
description = "A python library for the fully homomorphic encryption scheme ACES"
license.text = "MIT"
authors = [
    { name = "Remy Tuyeras", email = "rtuyeras@gmail.com" },
]

readme = "README.md"
keywords = ["ACES", "PyACES"]
requires-python = ">=3.9"

classifiers=[
  "Development Status :: 4 - Beta",  #"3 - Alpha", "4 - Beta" or "5 - Production/Stable"
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Topic :: Software Development :: Build Tools",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
]


# Dependencies
# -----------------------------------------------------------------------------

dependencies = [
    "numpy",
]

[project.urls]
Homepage = "https://github.com/remytuyeras/aces"
Issues = "https://github.com/remytuyeras/aces/issues"
repository = "https://github.com/remytuyeras/aces"

[build-system]
requires = ["setuptools", "wheel"]
